# rexd-frida-mcp

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json
docs/: MCP_SETUP.md  index.html
examples/: claude-code-add-json.txt  claude-code-mcp.json  codex-add.txt  e2e-hook-createfilew.mjs  e2e-notepad-memory-edit.mjs  notepad-demo.txt  sample.txt  target-read-file.mjs
src/: agent-source.mjs  bridge-core.mjs  index.mjs  mcp-server.mjs
targets/number_target/: Cargo.toml
targets/number_target/src/: main.rs
