[package]
name = "number_target"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging"
] }

[profile.release]
opt-level = 0
debug = true
strip = false
